# safe-rl-locomotion

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: ci.yml
configs/: cppo.yaml  ppo.yaml
reports/: experiment_log.md  report.md  results_hopper_v4.md
reports/figures/hopper_v4/: summary_1m.md  summary_500k.md
scripts/: aggregate_results.py  evaluate.py  make_plots.py  release_notes_v1.md  reproduce_hopper_v4_1m.sh  reproduce_hopper_v4_500k.sh  smoke_env.py  train_cppo.py  train_ppo.py
src/robot_safe_ppo/: __init__.py  buffers.py  cppo_lagrangian.py  eval.py  plotting.py  ppo.py  utils.py
src/safe_rl_locomotion/: __init__.py  buffers.py  cppo_lagrangian.py  ppo.py  utils.py
tests/: test_determinism.py  test_learning_regression.py  test_smoke.py
