[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "safe-rl-locomotion"
version = "1.0.0"
requires-python = ">=3.11"
description = "Baseline PPO and Lagrangian-constrained C-PPO on MuJoCo locomotion tasks"

[tool.setuptools.packages.find]
where = ["src"]
